--- a/.config/hypr/settings.example.conf
+++ b/.config/hypr/settings.example.conf
@@ -36,6 +36,11 @@ $xwayland       = true
 # The default terminal to use for keybind $mainMod + ENTER|T
 $terminal       = alacritty
 
+# Locale configuration
+# https://wiki.archlinux.org/title/Locale#Generating_locales
+# https://wiki.archlinux.org/title/Locale#LC_TIME:_date_and_time_format
+env = LC_TIME,en_US.UTF-8
+
 # Configure browser. Please select one and uncomment the $browser/$webapp parameters;
 # Default: Firefox
 
