yay/chromium.list added

--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,9 @@
 !/.config/webapp
 /.config/webapp/*
 !/.config/webapp/disabled
+!/.config/yay
+/.config/yay/*
+!/.config/yay/chromium.list
 !/.local
 /.local/*
 !/.local/bin
