--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -41,7 +41,7 @@ env = HYPRCURSOR_SIZE,24
 env = SDL_VIDEODRIVER,wayland
 
 # SSH
-env = SSH_AUTH_SOCK,$XDG_RUNTIME_DIR/ssh-agent.socket
+env = SSH_AUTH_SOCK,$XDG_RUNTIME_DIR/gcr/ssh
 
 # NVIDIA
 env = LIBVA_DRIVER_NAME,nvidia
@@ -62,10 +62,12 @@ exec-once = swww-daemon --no-cache
 exec = pkill waybar; waybar
 exec-once = waypaper --restore
 
-#exec-once = systemctl --user enable --now ssh-agent.service             # pacman -S openssh
+exec-once = systemctl --user enable --now gcr-ssh-agent.socket
 
 # Configure dark-theme
-exec-once = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark"
+exec = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark"
+exec = gsettings set org.gnome.desktop.interface gtk-theme "adw-gtk3"
+
 exec-once = gsettings set org.gnome.desktop.interface icon-theme "Papirus-Dark"
 
 ###################
