--- a/.gitignore
+++ b/.gitignore
@@ -50,5 +50,6 @@
 !/.local/share/ungoogled-chromium/spellingscheck/en-GB-10-1.bdic
 !/.local/share/ungoogled-chromium/spellingscheck/en-US-10-1.bdic
 !/.local/share/icons
+/.local/share/icons/**/steam_icon_*.png
 !/README.md
 !/confbak.sh
