ask/skip for password after autologin

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -57,7 +57,7 @@ env = NVD_BACKEND,direct
 
 exec-once = swaync
 exec-once = hypridle
-exec-once = systemctl is-active --quiet greetd.service && hyprlock
+exec-once = systemctl is-active --quiet greetd.service && test $askPasswordOnLogin -eq 1 && hyprlock
 exec-once = /usr/lib/hyprpolkitagent
 exec-once = swww-daemon --no-cache
 exec = pkill waybar; waybar
