--- a/.config/hypr/settings.example.conf
+++ b/.config/hypr/settings.example.conf
@@ -5,6 +5,10 @@
 # Default: SUPER
 $mainMod        = SUPER
 
+# Ask for password after (auto-login)
+# Default: 0 (false)
+$askPasswordOnLogin = 0
+
 # Configure keyboard layout(s). Can be switched with $mainMod + SPACE
 # https://wiki.hypr.land/Configuring/Variables/#input
 input {
