[hyprland] removed deprecated/removed gesture-settings [hyprland] marked Emby as "video" content [hyprland] marked Emby as "video" content [hypridle] fixed on-resume execution order, removed system control buttons from lockscreen [system] replaced qalculate with gnome-calculator [system] added missing brightnessctl command to core.list [system] replaced (deprecated) rofi-wayland with rofi

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -196,11 +196,6 @@ misc {
 ### INPUT ###
 #############
 
-# https://wiki.hypr.land/Configuring/Variables/#gestures
-gestures {
-    workspace_swipe = false
-}
-
 # Example per-device config
 # See https://wiki.hypr.land/Configuring/Keywords/#per-device-input-configs for more
 device {
@@ -369,7 +364,7 @@ windowrule = center, size 50% 50%, title:^(Open.*Files?|Save.*Files?|All Files|S
 
 # Define content types
 windowrule = content game, class:^steam_app_\d+$
-windowrule = content video, title:^.*youtube.*$
+windowrule = content video, title:^.*(youtube|emby).*$
 
 # Define tags
 windowrule = tag +photo, content:photo
