--- a/.config/hypr/hypridle.conf
+++ b/.config/hypr/hypridle.conf
@@ -5,14 +5,14 @@ general {
 }
 
 listener {
-    timeout = 300                                # 5min.
+    timeout = 120                                # 2 min.
     on-timeout = brightnessctl -s set 10         # set monitor backlight to minimum, avoid 0 on OLED monitor.
     on-resume = brightnessctl -r                 # monitor backlight restore.
 }
 
 # turn off keyboard backlight, comment out this section if you dont have a keyboard backlight.
 listener {
-    timeout = 300                                          # 5min.
+    timeout = 60                                          # 1 min.
     on-timeout = brightnessctl -sd rgb:kbd_backlight set 0 # turn off keyboard backlight.
     on-resume = brightnessctl -rd rgb:kbd_backlight        # turn on keyboard backlight.
 }
@@ -25,5 +25,5 @@ listener {
 listener {
     timeout = 930                                                     # 15.5min
     on-timeout = hyprctl dispatch dpms off                            # screen off when timeout has passed
-    on-resume = hyprctl dispatch dpms on && brightnessctl -r && systemctl --user restart waybar.service         # screen on when activity is detected after timeout has fired.
+    on-resume = hyprctl dispatch dpms on && hyprctl reload && brightnessctl -r   # screen on when activity is detected after timeout has fired.
 }
