replaced all exec(-once) instances with systemd services

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -53,23 +53,21 @@ env = NVD_BACKEND,direct
 #################
 
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
-# exec-once = hyprpm reload -n
+exec-once = test $askPasswordOnLogin -eq 1 && hyprlock
 
-exec-once = swaync
-exec-once = hypridle
-exec-once = systemctl is-active --quiet greetd.service && test $askPasswordOnLogin -eq 1 && hyprlock
-exec-once = /usr/lib/hyprpolkitagent
-exec-once = swww-daemon --no-cache
-exec = pkill waybar; waybar
-exec-once = waypaper --restore
-
+exec-once = systemctl --user enable --now swaync.service
+exec-once = systemctl --user enable --now hypridle.service
+exec-once = systemctl --user enable --now hyprpolkitagent.service
 exec-once = systemctl --user enable --now gcr-ssh-agent.socket
 
-# Configure dark-theme
-exec = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark"
-exec = gsettings set org.gnome.desktop.interface gtk-theme "adw-gtk3"
-
+# Configure GTK dark-theme
+exec-once = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark"
+exec-once = gsettings set org.gnome.desktop.interface gtk-theme "adw-gtk3"
 exec-once = gsettings set org.gnome.desktop.interface icon-theme "Papirus-Dark"
+
+# Restart waybar service on hypctl reload
+exec = systemctl --user restart waybar.service
+exec = waypaper --restore
 
 ###################
 ### PERMISSIONS ###
