fixed error in waypaper config

--- a/.config/waypaper/config.example.ini
+++ b/.config/waypaper/config.example.ini
@@ -9,7 +9,7 @@ show_path_in_tooltip = True
 backend = swww
 fill = fill
 sort = name
-color = #ffffff
+color = ffffff
 subfolders = True
 all_subfolders = True
 show_hidden = False
