--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -200,6 +200,11 @@
       "warning": 30,
       "critical": 15
     },
+    "events": {
+			"on-discharging-warning": "notify-send -u normal 'Low Battery'",
+		  "on-discharging-critical": "notify-send -u critical 'Very Low Battery'",
+		  "on-charging-100": "notify-send -u normal 'Battery Full!'"
+		},
     "format": "{icon} {capacity}%",
     "format-full": "{icon} {capacity}%",
     "format-charging": " {capacity}%",
