force focus for keyring passphrase prompts

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -387,6 +387,7 @@ windowrule = float, class:org.pulseaudio.pavucontrol
 
 # Force focus for Nautilus dialogs
 windowrule = stayfocused, class:org.gnome.Nautilus,title:^$
+windowrule = stayfocused, class:gcr-prompter
 
 # Define styling
 windowrule = norounding, tag:game
